--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,20 @@
     <string name="loading_failed">Failed to load</string>
     <string name="retry">Retry</string>
     <string name="loading">Loading</string>
+    <string name="create_button_text">Create</string>
+    <string name="update_button_text">Update</string>
+    <string name="cancel_button_text">Cancel</string>
+    <string name="login_title_text">Login to BlitzWare</string>
+    <string name="login_sub_title_text_1">New here?</string>
+    <string name="login_sub_title_text_2">Create an account</string>
+    <string name="login_button_text">Login</string>
+    <string name="register_title_text">Create an account</string>
+    <string name="register_sub_title_text_1">Already have an account?</string>
+    <string name="register_sub_title_text_2">Sign in here</string>
+    <string name="register_button_text">Register</string>
+    <string name="resources_title">Available Resources</string>
+    <string name="community_title">Community General Chat</string>
+    <string name="account_menu_title">Account Settings</string>
+    <string name="account_logs_title">Account Logs</string>
+    <string name="account_details_title">Account Details</string>
 </resources>
